# riscv-emulator

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  conformance.yml
app/: rvemu_cli.cpp  rvemu_cli.hpp  rvemu_debugger.cpp  rvemu_debugger.hpp  rvemu_main.cpp
benchmarks/: benchmark_workload.cpp  benchmark_workload.hpp  rvemu_benchmarks.cpp
cmake/: ProjectOptions.cmake
conformance/act4/: README.md  audit_generated_elfs.py  audit_generated_elfs_test.py  link.ld  pins.json  prepare_sail_config.py  riscv_arch_test.h  run_official_smoke.sh  rvmodel_macros.h  smoke-tests.txt
conformance/act4/config/: rvemu-rv32im.yaml  test_config.yaml
include/rvemu/: branch_predictor.hpp  cache_model.hpp  cpu_state.hpp  cycle_estimator.hpp  elf_loader.hpp  execution_engine.hpp  execution_observation.hpp  instruction.hpp  linux_syscalls.hpp  memory.hpp  performance_analyzer.hpp  program_session.hpp  stack.hpp
src/: branch_predictor.cpp  cache_model.cpp  cpu_state.cpp  cycle_estimator.cpp  elf_loader.cpp  execution_engine.cpp  instruction.cpp  linux_syscalls.cpp  memory.cpp  performance_analyzer.cpp  program_session.cpp  stack.cpp
tests/: CMakeLists.txt  act_smoke_test.cpp  benchmark_workload_test.cpp  branch_predictor_test.cpp  cache_model_test.cpp  control_flow_instructions_test.cpp  cpu_state_test.cpp  cycle_estimator_test.cpp  debugger_test.cpp  elf_loader_test.cpp  execution_engine_test.cpp  execution_observation_test.cpp  immediate_instructions_test.cpp  instruction_test.cpp  linux_syscalls_test.cpp  m_extension_instructions_test.cpp  memory_instructions_test.cpp  memory_test.cpp  performance_analyzer_test.cpp  program_session_test.cpp  register_instructions_test.cpp  rvemu_cli_test.cpp  stack_test.cpp  system_instructions_test.cpp
tools/: act_smoke.cpp  act_smoke.hpp  act_smoke_main.cpp
